[2019-04-25 18:00:52.588] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:00:52.588] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:00:52.588] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:00:52.588] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:00:52.588] [logger] [info] Material 0 was added to project test
[2019-04-25 18:00:58.852] [logger] [info] Material 0 was removed from project test
[2019-04-25 18:06:34.213] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:34.213] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:34.213] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:34.213] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:34.213] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:34.213] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:34.213] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:45.788] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:45.788] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:45.788] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:45.788] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:45.788] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:45.788] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:45.788] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:06:57.807] [logger] [info] Material 0 was removed from project A Great Movie
[2019-04-25 18:07:10.850] [logger] [info] Material 0 was added to project test